# e-Paper-IP-Display

./: .gitignore  AGENTS.md  README.md  build.sh  install.sh  pyproject.toml  release.sh
.ael/ralph/: .ralph-complete  context-budget.md  task.md
ai/: README.md  governance.md
ai/ael/: README.md  config.yaml
ai/knowledge/: behavioral-standards.schema.json  behavioral-standards.yaml  obsidian_markdown_guidelines.md  testing-standards.md  validate-behavioral-standards.py
ai/profiles/: README.md  claude-desktop.md  claude.md  mlx_devstral_small_2507_Q8.md  mlx_devstral_small_2_2512_Q8.md
ai/templates/: T01-design.md  T04-prompt.md  T06-result.md
docs/: README.md  Waveshare 2.13" Touch e-Paper HAT (Version 4).md  e-Paper IP Display Guide.md  e-Paper IP Display Installation Guide.md
release/: README.md
src/: README.md  epaper-ip-display.service  epaper-ip-install.sh  epaper_ip_display.py
src/epaper_ip_display/: epd2in13_V4.py  epdconfig.py  main.py
src/tests/: README.md
workspace/: README.md
workspace/audit/: README.md
workspace/change/: README.md  change-3f7e9a2b-add-hostname-display.md  change-a1c4e7f2-add-hostname-display.md
workspace/design/: README.md  design-0000-master_epaper-ip-display.md
workspace/issues/: README.md  issue-3f7e9a2b-add-hostname-display.md  issue-a1c4e7f2-add-hostname-display.md  issue-f1a3c5e7-gpiozero-sysfs-lgpio.md
workspace/prompt/: README.md  prompt-a1c4e7f2-fix-import-hostname.md
workspace/requirements/: requirements-epaper-ip-display-master.md
workspace/test/: README.md
workspace/trace/: README.md  (+1 more)
(+34 files in other folders)
